--- a/index.html
+++ b/index.html
@@ -46,16 +46,16 @@
                     <p class="about-me__info--para">
                         I'm a self taught <strong class="text--purple">frontend software engineer</strong> with a passion for learning and trying to excel at any new projects given to me. </p>
                     <div class="about-me__links">
-                        <a href="" class="about-me__link">
+                        <a href="https://www.linkedin.com/in/lukebowmanut/" target="_blank" class="about-me__link">
                             <i class="fab fa-linkedin-in"></i>
                         </a>
-                        <a href="" class="about-me__link">
+                        <a href="https://github.com/LukeBowm" target="_blank" class="about-me__link">
                             <i class="fab fa-github"></i>
                         </a>
-                        <a href="" class="about-me__link">
+                        <a href="mailto:email@lukebowman.ut@gmail.com" target="_blank" class="about-me__link">
                             <i class="far fa-envelope"></i>
                         </a>
-                        <a href="" class="about-me__link">
+                        <a href="./davidbr4gg.github.io-master/assets/Luke_Bowman_Resume.docx.pdf" target="_blank" class="about-me__link">
                             <i class="fas fa-file-pdf"></i>
                         </a>
                     </div>
@@ -174,5 +174,36 @@
             </div>
         </div>
     </section>
+    <footer>
+        <div class="row">
+            <a href="#">
+                <figure>
+                    <img src="./davidbr4gg.github.io-master/assets/logo.png" class="footer__logo--img" alt="">
+                </figure>
+            </a>
+            <div class="footer__social--list">
+                <a href="https://github.com/LukeBowm" class="
+                footer__social--link
+                link__hover-effect
+                link__hover-effect--white
+                " target="_blank">GitHub</a>
+                <a href="https://www.linkedin.com/in/lukebowmanut/" class="
+                footer__social--link
+                link__hover-effect
+                link__hover-effect--white
+                " target="_blank">LinkedIn</a>
+                <a href="mailto:email@lukebowman.ut@gmail.com" class="
+                footer__social--link
+                link__hover-effect
+                link__hover-effect--white
+                " target="_blank">Email</a>
+                <a href="./davidbr4gg.github.io-master/assets/Luke_Bowman_Resume.docx.pdf" class="
+                footer__social--link
+                link__hover-effect
+                link__hover-effect--white
+                " target="_blank">Resume</a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
