--- a/index.html
+++ b/index.html
@@ -13,22 +13,22 @@
         <nav>
             <div class="personal__logo">Luke Bowman</div>
             <ul class="nav__link--list">
-                <li>
-                    <a href="" class="
+                <li class="nav__link">
+                    <a href="#languages" class="
                     nav__link--anchor
                     link__hover-effect
                     link__hover-effect--black
                     ">Languages</a>
                 </li>
-                <li>
-                    <a href="" class="
+                <li class="nav__link">
+                    <a href="#projects" class="
                     nav__link--anchor
                     link__hover-effect
                     link__hover-effect--black
                     ">Projects</a>
                 </li>
-                <li>
-                    <a href="" class="
+                <li class="nav__link">
+                    <a href="mailto:lukebowman.ut@gmail.com" class="
                     nav__link--anchor
                     nav__link--anchor-primary
                     ">Contact</a>
@@ -41,7 +41,7 @@
                     <figure class="about-me__picture--mask">
                         <img class="about-me__picture" src="davidbr4gg.github.io-master/assets/me.JPG" alt="Picture of Me!">
                     </figure>
-                    <h1 class="about-me__info--title">Hey! I'm <span class="text--purple">Luke Bowman</span>
+                    <h1 class="about-me__info--title">Hey! I'm <span class="text--purple">Luke Bowman</span>&nbsp;<span class="wave">👋</span>
                     </h1>
                     <p class="about-me__info--para">
                         I'm a self taught <strong class="text--purple">frontend software engineer</strong> with a passion for learning and trying to excel at any new projects given to me. </p>
@@ -175,11 +175,15 @@
         </div>
     </section>
     <footer>
-        <div class="row">
-            <a href="#">
-                <figure>
+        <div class="footer__row">
+            <a href="#" class="footer__anchor">
+                <figure class="footer__logo">
                     <img src="./davidbr4gg.github.io-master/assets/logo.png" class="footer__logo--img" alt="">
                 </figure>
+                <span class="footer__logo--popper">
+                    Top
+                    <i class="fas fa-arrow-up"></i>
+                </span>
             </a>
             <div class="footer__social--list">
                 <a href="https://github.com/LukeBowm" class="
